--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mockjs": "^1.1.0",
     "mongoose": "^5.11.18",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
